# GithubActions_AutoRetraining_newdata_Deploy

./: .gitignore  README.md  app.py  pyproject.toml  train_model.py
.github/workflows/: ci_cd.yml
data/: train_new.csv  train_old.csv
model/: accuracy.txt
