[project]
name = "autoretraining-newdata-deploy"
version = "0.1.0"
description = ""
authors = [
    {name = "azam6301732985",email = "azamazam0536048587@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
